# fix2float

./: CMakeLists.txt  README.rst  scale.cpp  scale.h
tests/: test_8x8.cpp  test_8x8s.cpp  test_8x8s_small.cpp
